[Bugs fixed]
 - Potential NPE in REST book example (ch7, UserResource). Reported by Marc Portier.
 - Potential NPE during KeyStore initialization for Simple HTTPS connector. Report by Quintin May.
 - Transmit the Component dispatcher to the ServletContextAdapter. Reported by Mike Moran.
 - Fixed bug in the DirectoryResource when looking for variant references. Reported by Mike Moran.
 - Fixed address binding issue with Simple HTTP/HTTPS connectors. Contributed by Alex Milowski.
 - Fixed potential NPE in Restlet.getContext() method. Contributed by Alex Milowski.
 
[Enhancements] 
 - Clarified the Javadocs for the Variant's "identifier" property. Reported by Joe Holloway.
 - Clarified the Javadocs for the Resource.getVariants() method. Suggested by John D. Mitchell.
 - An exception is not thrown anymore when the Etag can not be successfully parsed.
 - The OPTIONS method now always returns an "Allow" HTTP header to more closely match the HTTP 1.1
   and WebDAV specifications. Suggested by Rob Heittman.

1.0.4 (2007-07-25)
[Bugs fixed]
 - Fixed spacing issue in HTTP reading/writing code (NRE's HttpUtils class). Reported by Ilya Klyuchnikov.
 - Fixed bug in StreamClientCall causing the response's status to always be null. Reported by Ilya Klyuchnikov.
 - Fixed issue that makes the server to return a 304 status even if the resource is modified 
   (the "if-none-match" condition was badly implemented). Reported by Vladimir Djurovic and Adam Taft.
 - Fixed closing issue in internal HTTP server causing the browser to hang on requests. Reported by Serge.
 - Reverted changes to the ServerServlet back to the 1.0.2 behavior (application context set after construction 
   via setContext() method). The new behavior requires NRE API changes and will only be available in the 
   Restlet 1.1. Issue reported by Richard Wallace. 
 - Restlet.getContext() now always return a non-null context.